Fix sharing alignment in invites.

--- a/app/views/invites/invites.sass
+++ b/app/views/invites/invites.sass
@@ -67,6 +67,8 @@
           margin: 10px 0 0 0
           .twitter
             padding-left: 0px
+            padding-right: 10px
+            float: left
           .facebook
             margin-left: 10px
             display:inline
